# LuminaStudio

./: .gitignore  .vercelignore  LICENSE  README.md  package-lock.json  package.json  vercel.json  vite.config.ts
.github/workflows/: release.yml
api/: generate-proxy.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/pages/: Generate.tsx  Settings.tsx
src/services/: imageGen.ts  settings.ts
src/utils/: platform.ts
